[project]
name = "tt-model-bringup"
version = "0.0.0"
description = "Tenstorrent model bringup"
requires-python = "<=3.13,>3.10"
dependencies = [
    "pytest",
    "torch",
    "torchvision>=0.22.0,<0.24.0",  # https://github.com/astral-sh/uv/issues/16386
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
